@@ -12,7 +12,7 @@ main_freebsd_task:
     - pip install --user Jinja2 PyYAML
   main_build_script:
     - ./autogen.sh
-    - ./configure --enable-debug --enable-checks-all CFLAGS='-O3'
+    - ./configure --enable-assert --enable-checks-all CFLAGS='-O3'
     - make
     - sudo make install
   main_test_script:
@@ -32,7 +32,7 @@ mruby_freebsd_task:
     - unzip mruby-3.1.0.zip
   main_build_script:
     - ./autogen.sh
-    - ./configure --enable-debug CFLAGS='-O3'
+    - ./configure --enable-assert CFLAGS='-O3'
     - make
     - sudo make install
   mruby_test_script:
@@ -56,7 +56,7 @@ ruby_freebsd_task:
     - sudo make install
   main_build_script:
     - ./autogen.sh
-    - ./configure --enable-debug CFLAGS='-O3'
+    - ./configure --enable-assert CFLAGS='-O3'
     - make
     - sudo make install
   ruby_build_script:
@@ -78,7 +78,7 @@ rust_freebsd_task:
     - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
   main_build_script:
     - ./autogen.sh
-    - ./configure --enable-debug CFLAGS='-O3'
+    - ./configure --enable-assert CFLAGS='-O3'
     - make
     - sudo make install
   rust_test_script:
