@@ -13,7 +13,7 @@ jobs:
       MRUBY_YAML_USE_SYSTEM_LIBRARY: x
     strategy:
       matrix:
-        debug: ['--disable-debug', '--enable-debug']
+        assert: ['--disable-assert', '--enable-assert']
         packages:
           - configure: ''
           - configure: '--without-all'
@@ -30,7 +30,7 @@ jobs:
       - name: autogen
         run: ./autogen.sh
       - name: configure
-        run: ./configure ${{matrix.debug}} ${{matrix.packages.configure}} CFLAGS='-O3'
+        run: ./configure ${{matrix.assert}} ${{matrix.packages.configure}} CFLAGS='-O3'
       - name: make
         run: make
       - name: install
