@@ -42,7 +42,7 @@ AM_INIT_AUTOMAKE([1.16 subdir-objects])
 ###############
 
 dnl Features (enabled by default)
-AC_ARG_ENABLE([debug],           AS_HELP_STRING([--disable-debug],          [disable debugging]))
+AC_ARG_ENABLE([assert],          AS_HELP_STRING([--disable-assert],         [disable assertions]))
 AC_ARG_ENABLE([float],           AS_HELP_STRING([--disable-float],          [disable floating-point arithmetic]))
 AC_ARG_ENABLE([werror],          AS_HELP_STRING([--disable-werror],         [disable -Werror]))
  
@@ -127,7 +127,7 @@ AS_IF([test "$with_all" = no], do_without_all)
 ##################
 
 dnl Features (enabled by default)
-AS_IF([test "$enable_debug"           = no ], [enable_debug=no],            [enable_debug=yes])
+AS_IF([test "$enable_assert"          = no ], [enable_assert=no],           [enable_assert=yes])
 AS_IF([test "$enable_float"           = no ], [enable_float=no],            [enable_float=yes])
 AS_IF([test "$enable_werror"          = no ], [enable_werror=no],           [enable_werror=yes])
 
@@ -190,7 +190,7 @@ dnl Architecture (additional)
 AM_CONDITIONAL([ASM_X86],                [test "$host_cpu" = i386 -o "$host_cpu" = x86_64])
 
 dnl Features (enabled by default)
-AM_CONDITIONAL([ENABLE_DEBUG],           [test "$enable_debug"           = yes])
+AM_CONDITIONAL([ENABLE_ASSERT],          [test "$enable_assert"          = yes])
 AM_CONDITIONAL([ENABLE_FLOAT],           [test "$enable_float"           = yes])
 AM_CONDITIONAL([ENABLE_WERROR],          [test "$enable_werror"          = yes])
 
@@ -241,7 +241,7 @@ AS_IF([test "$host_cpu" = i386],              [AC_DEFINE([ASM_X86],             
 AS_IF([test "$host_cpu" = x86_64],            [AC_DEFINE([ASM_X86],                [1], [architecture is x86])])
 
 dnl Features (enabled by default)
-AS_IF([test "$enable_debug"           = yes], [AC_DEFINE([ENABLE_DEBUG],           [1], [enabled debugging])])
+AS_IF([test "$enable_assert"          = yes], [AC_DEFINE([ENABLE_ASSERT],          [1], [enabled assertions])])
 AS_IF([test "$enable_float"           = yes], [AC_DEFINE([ENABLE_FLOAT],           [1], [enabled floating-point arithmetic])])
 AS_IF([test "$enable_werror"          = yes], [AC_DEFINE([ENABLE_WERROR],          [1], [enabled -Werror])])
 
@@ -278,7 +278,7 @@ AS_IF([test "$with_arch_i386"         = yes], [AC_DEFINE([WITH_ARCH_X86],       
 AS_IF([test "$with_arch_x86_64"       = yes], [AC_DEFINE([WITH_ARCH_X86],          [1], [with architecture x86])])
 
 dnl Additional
-AS_IF([test "$enable_debug"           = yes], [AC_DEFINE([KERNAUX_DEBUG],          [1], [enabled debugging])])
+AS_IF([test "$enable_assert"          = yes], [AC_DEFINE([KERNAUX_ENABLE_ASSERT],  [1], [enabled assertions])])
 
 
 
