@@ -1,4 +1,4 @@
-#define KERNAUX_DEBUG
+#define KERNAUX_ENABLE_ASSERT
 #include <kernaux/assert.h>
 
 #include <assert.h>
