@@ -1,6 +1,10 @@
 2022-12-13  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* tests/Makefile.am: Fix FreeBSD builds
+	* configure.ac: Rename feature "--(enable|disable)-debug" to
+	"--(enable|disable)-assert"
+	* include/kernaux/assert.h: Rename definition "KERNAUX_DEBUG" to
+	"KERNAUX_ENABLE_ASSERT"
 
 2022-12-12  Alex Kotov  <kotovalexarian@gmail.com>
 
